--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "fengyong <373209197@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 192.168.232.243 ",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
@@ -14,11 +14,14 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-component": "^0.10.0",
     "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "element-ui": "^1.4.1",
     "file-loader": "^0.9.0",
+    "mint-ui": "^2.2.9",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.18.2",
