--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "vue": "^2.3.3"
   },
   "devDependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-component": "^0.10.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "element-ui": "^1.4.1",
