--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.3.3"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.3",
     "axios": "^0.16.2",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
@@ -25,6 +26,7 @@
     "file-loader": "^0.9.0",
     "mint-ui": "^2.2.9",
     "node-sass": "^4.5.0",
+    "postcss-loader": "^2.0.6",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.18.2",
     "vue-loader": "^12.1.0",
