--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^0.25.0",
     "element-ui": "^1.4.1",
     "file-loader": "^0.9.0",
+    "js-cookie": "^2.1.4",
     "mint-ui": "^2.2.9",
     "node-sass": "^4.5.0",
     "postcss-loader": "^2.0.6",
