--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "fengyong <373209197@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 192.168.232.243",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 192.168.0.110",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "echarts": "^3.7.1",
     "element-ui": "^1.4.1",
     "file-loader": "^0.9.0",
     "js-cookie": "^2.1.4",
